# ml_explore

./: .gitignore  README.md  moe.ipynb  pyproject.toml
gpt2/: dev.ipynb  gpt2.md  train_gpt2.py
llama3/: dev.ipynb  llama3.ipynb
