[project]
name = "ml-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[tool.ruff]
line-length = 100
